--- a/components/_footer.scss
+++ b/components/_footer.scss
@@ -2,6 +2,12 @@ footer {
     color: #585d65;
     text-align: center;
     font-size: 20px;
+    a{
+        color: gray;
+        &:hover{
+            color: white;
+        }
+    }
     .fab{
         margin: 20px 20px; 
     }
