--- a/components/_home.scss
+++ b/components/_home.scss
@@ -24,8 +24,12 @@ header {
         width: 10%;
         position: absolute;
         .fas{
+            font-size: 25px;
             margin: 35px 20px 20px;
             color: #585d65;
+            &:hover{
+                color: white;
+            }
         }
     }
     li {
