--- a/components/_skills.scss
+++ b/components/_skills.scss
@@ -1,4 +1,33 @@
 #skills {
     width: 100%;
     height: 50%;
+    h3{
+        margin-top: 30px;
+    }
+}
+
+.progress-bar{
+    height: 25px;
+    width: 100%;
+    color: white;
+    border: 1px solid white;
+}
+.percentage{
+    height: 23px;
+    background-color: gray;
+    width: 90%;
+    padding-left: 80%;
+}
+
+.two{
+    width: 50%;
+    padding-left: 40%;
+}
+.three{
+    width: 80%;
+    padding-left: 70%;
+}
+.four{
+    width: 40%;
+    padding-left: 30%;
 }
