--- a/styles.css
+++ b/styles.css
@@ -27,8 +27,12 @@ header .fa-bars {
     position: absolute;
   }
   .navbar .fas {
+    font-size: 25px;
     margin: 35px 20px 20px;
     color: #585d65;
+  }
+  .navbar .fas:hover {
+    color: white;
   }
 }
 .navbar li {
@@ -100,6 +104,82 @@ body {
   width: 100%;
   height: 50%;
 }
+#skills h3 {
+  margin-top: 30px;
+}
+
+.progress-bar {
+  height: 25px;
+  width: 100%;
+  color: white;
+  border: 1px solid white;
+}
+
+.percentage {
+  height: 23px;
+  background-color: gray;
+  width: 90%;
+  padding-left: 80%;
+}
+
+.two {
+  width: 50%;
+  padding-left: 40%;
+}
+
+.three {
+  width: 80%;
+  padding-left: 70%;
+}
+
+.four {
+  width: 40%;
+  padding-left: 30%;
+}
+
+#work .container {
+  margin-top: 30px;
+  position: relative;
+  width: 100%;
+}
+#work .image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: 0.5s ease;
+  backface-visibility: hidden;
+  border-radius: 3%;
+}
+#work .middle {
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+#work .container:hover .image {
+  opacity: 0.3;
+}
+#work .container:hover .middle {
+  opacity: 1;
+}
+#work .text {
+  background-color: white;
+  font-size: 16px;
+  padding: 16px 32px;
+  border-radius: 4%;
+}
+#work .text a {
+  color: gray;
+  text-decoration: none;
+}
+#work .text a:hover {
+  color: black;
+}
 
 #about {
   width: 100%;
@@ -110,19 +190,22 @@ body {
   width: 100%;
   height: 50%;
 }
+#services img {
+  width: 60px;
+  margin-top: 30px;
+}
 
 main {
   font-family: "Poppins", sans-serif;
 }
 main h1 {
   font-weight: 700;
+  color: #d7b94c;
+  font-family: "Inconsolata", Consolas, monospace;
 }
 main h2, main h4 {
   text-align: center;
   font-weight: 300;
-}
-main h3 {
-  margin-top: 25px;
 }
 main hr {
   width: 100%;
@@ -135,26 +218,55 @@ main section {
   padding: 20px;
 }
 main p {
-  margin-top: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  position: relative;
+  float: left;
+}
+main p span {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: gray;
+  width: 100%;
+  border-left: 0.1em solid transparent;
+  animation: typing 3s steps(12) forwards, cursor 1s infinite;
 }
 
-@media (min-width: 1220px) {
-  #wrap {
-    display: none;
+/* Animation */
+@keyframes typing {
+  from {
+    width: 100%;
+  }
+  to {
+    width: 0;
   }
 }
-
+@keyframes cursor {
+  50% {
+    border-color: white;
+  }
+}
 footer {
   color: #585d65;
   text-align: center;
   font-size: 20px;
+}
+footer a {
+  color: gray;
+}
+footer a:hover {
+  color: white;
 }
 footer .fab {
   margin: 20px 20px;
 }
 
 form input {
-  width: 50%;
+  width: 100%;
+}
+form .btn {
+  color: white;
 }
 
 /*# sourceMappingURL=styles.css.map */
