--- a/components/_home.scss
+++ b/components/_home.scss
@@ -81,8 +81,7 @@ body {
 }
 
 .btn {
-    margin-top: 10%;
-    padding: 0 30px;
+    padding: 10px 30px;
     height: 64px;
     text-align: center;
     text-transform: uppercase;
@@ -90,11 +89,16 @@ body {
     outline: none;
     border: 1px solid #585d65;
     cursor: pointer;
-    border-radius: 64px;
-    a{
-    font-size: 12px;
+    border-radius: 64px;  
+    font-size: 16px;
     color: #FFFF;
     text-decoration: none;
+    &:hover{
+        background-color: white;
+        color: gray;
     }
 }
 
+.description {
+    margin-bottom: 50px;
+}
