--- a/components/_main.scss
+++ b/components/_main.scss
@@ -17,7 +17,7 @@ main {
         background-color: #FFFF;
         height: 1px;
         border: 1px solid #585d65;
-        
+        margin-top: 20px;
     }
     section{
         margin-top: 3%;
