--- a/styles.css
+++ b/styles.css
@@ -83,8 +83,7 @@ body {
 }
 
 .btn {
-  margin-top: 10%;
-  padding: 0 30px;
+  padding: 10px 30px;
   height: 64px;
   text-align: center;
   text-transform: uppercase;
@@ -93,11 +92,17 @@ body {
   border: 1px solid #585d65;
   cursor: pointer;
   border-radius: 64px;
-}
-.btn a {
-  font-size: 12px;
+  font-size: 16px;
   color: #FFFF;
   text-decoration: none;
+}
+.btn:hover {
+  background-color: white;
+  color: gray;
+}
+
+.description {
+  margin-bottom: 50px;
 }
 
 #skills {
@@ -212,6 +217,7 @@ main hr {
   background-color: #FFFF;
   height: 1px;
   border: 1px solid #585d65;
+  margin-top: 20px;
 }
 main section {
   margin-top: 3%;
