--- a/components/_contact.scss
+++ b/components/_contact.scss
@@ -1,4 +1,8 @@
 form {
+    @media screen and (min-width: 1220px){
+        width: 80%;
+        padding-left: 20%;
+    }
    input{
        width: 100%;
    }
