--- a/components/_home.scss
+++ b/components/_home.scss
@@ -6,40 +6,140 @@
 }
 
 header {
-    .fa-bars{
+    width: 100%;
+    position: fixed;
+    height: 45px;
+    top: 0;
+    padding: 10px 5%;
+    nav {
         float: right;
-        margin: 20px;
-        color: #585d65;
-        @media (min-width:1220px){
-            display: none;
-        }
     }
 }
 
-.navbar {
-    display: none;
-    @media (min-width:1220px){
-        padding: 20px;
-        display: block;
+/* Hamburguer Menu */
+
+.menu {
+    @media screen and (min-width:1220px){
+        padding: 20px 10px;
+        display: inline-block;
         width: 10%;
         position: absolute;
+        left: 5px;
+        top: 40px;
         .fas{
             font-size: 25px;
-            margin: 35px 20px 20px;
+            margin-top: 30px;
             color: #585d65;
-            &:hover{
+            &:hover {
                 color: white;
             }
+            }
         }
-    }
-    li {
-        margin: 15px 0;
-        display: inline-block;
-        a{
+        ul {
+            width: 100%;
+            position: absolute;
+            top: 45px;
+            left:10px;
+            overflow: hidden;
+            list-style: none;
+            background: black;
+            height: 0px;
+            @media screen and (min-width: 1220px){
+                position: relative;
+                top: 20px;
+                overflow: hidden;
+                background: unset;
+                height: unset;
+            }
+        }
+        li {
+            position: relative;
+            &:hover {
+                background: #5a5a5a;
+                @media screen and (min-width: 1220px){
+                    background: unset;
+                    border-bottom: 2px solid gray;
+                }
+            }
+            @media screen and (min-width: 1220px){
+                padding: 5px 10px;
+                display: block;
+                float: left;
+            }
+        }
+        a {
+            position: relative;
             text-decoration: none;
-        }
+            color: white;
+            padding: 16px 5%;
+            line-height: 28px;
+            display: block;
+            &:hover {
+                color: #ffff;
+            }
+            @media screen and (min-width: 1220px){
+                padding: 10px;
+                font-size: 30px;
+            }
     }
 }
+
+.bars{
+    display: block;
+    width: 25px;
+    height: 2.5px;
+    margin-bottom: 6.5px;
+    position: relative;
+    background: #000;
+    z-index: 1;
+    transform-origin: 3px 0px;
+    transition: transform 0.5s ease,
+        opacity 0.55s ease;
+    &:first-child {
+        transform-origin: 0% 0%;
+    }
+    &:nth-last-child(2) {
+        transform-origin: 0% 100%;
+    }
+    @media screen and (min-width: 1220px){
+        display: none;
+    }
+}
+
+
+/* Input type:checkbox style */
+
+.button {
+    display: block;
+    width: 40px;
+    height: 32px;
+    opacity: 0;
+    z-index: 2;
+    position: absolute;
+    &:hover{
+        cursor: pointer;
+    }
+    &:checked ~ ul  {
+        height: 240px;
+        transition: height 0.5s ease-in-out;
+    }
+    &:checked ~ span {
+        opacity: 1;
+        transform: rotate(45deg) translate(2px, 1px);
+        &:nth-last-child(3) {
+            opacity: 0;
+            transform: rotate(0deg) scale(0.2, 0.2);
+        }
+        &:nth-last-child(2) {
+        transform: rotate(-45deg) translate(1px, 0px);
+        }
+    }
+    @media screen and (min-width: 1220px){
+        display: none;
+    }
+}
+
+/* Body styles */
 
 body {
     background-color: #373b40;
