--- a/components/_main.scss
+++ b/components/_main.scss
@@ -13,7 +13,9 @@ main {
     }
     
     hr{
-        width: 100%;
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
         background-color: #FFFF;
         height: 1px;
         border: 1px solid #585d65;
@@ -22,6 +24,9 @@ main {
     section{
         margin-top: 3%;
         padding: 20px;
+        img {
+            width: 100%;
+        }
     }
     p{
         margin-top: 10px;
@@ -38,7 +43,11 @@ main {
         animation: typing 3s steps(12) forwards,
                              cursor 1s infinite;
     }
-    }  
+   
+}
+}
+.flex-images {
+    margin-top: 5%;
 }
 
 /* Animation */
@@ -50,3 +59,30 @@ main {
 	50% { border-color: white;}
 }
 
+
+@media screen and (min-width: 1220px){
+    .flex-container {
+        display: flex;
+        flex-flow: row wrap;
+        .flex-images {
+            width: 100%;
+            height: auto;
+            padding: 3% 3% 0;
+            margin-top: 5%;
+            border-radius: 4%;
+        }
+        .flex-components {
+            display: flex;
+            flex-flow: row;
+            padding-left: 8%;
+        }
+        .paragraph {
+            width: 100%;
+            height: auto;
+        }
+        .second-item {
+            &:nth-of-type(1) { order: 1; 
+            }
+        }
+    }
+}
