--- a/components/_skills.scss
+++ b/components/_skills.scss
@@ -1,6 +1,10 @@
 #skills {
     width: 100%;
     height: 50%;
+    @media screen and (min-width: 1220px){
+        width: 50%;
+        padding-left: 10%;
+    }
     h3{
         margin-top: 30px;
     }
