--- a/components/_work.scss
+++ b/components/_work.scss
@@ -1,8 +1,12 @@
 #work{
-    .container {
+  
+      .container {
         margin-top: 30px;
         position: relative;
         width: 100%;
+        @media screen and (min-width: 1220px){
+          margin: 2%;
+        }
     }
     
     .image {
@@ -13,6 +17,7 @@
       transition: .5s ease;
       backface-visibility: hidden;
       border-radius: 3%;
+   
     }
     
     .middle {
@@ -24,6 +29,7 @@
       transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
       text-align: center;
+      
     }
     
     .container:hover .image {
@@ -39,6 +45,7 @@
       font-size: 16px;
       padding: 16px 32px;
       border-radius: 4%;
+      
       a{
           color: gray;
           text-decoration: none;
@@ -47,6 +54,7 @@
           }
       }
     }
+   
     
     
     
