--- a/components/_main.scss
+++ b/components/_main.scss
@@ -46,6 +46,12 @@ main {
    
 }
 }
+
+.skills-division {
+    @media screen and (min-width: 1220px){
+        display: none;
+    }
+}
 .flex-images {
     margin-top: 5%;
 }
