--- a/components/_skills.scss
+++ b/components/_skills.scss
@@ -1,14 +1,11 @@
 #skills {
     width: 100%;
     height: 50%;
-    @media screen and (min-width: 1220px){
-        width: 50%;
-        padding-left: 10%;
-    }
     h3{
         margin-top: 30px;
     }
 }
+
 
 .progress-bar{
     height: 25px;
@@ -34,4 +31,23 @@
 .four{
     width: 40%;
     padding-left: 30%;
+}
+
+.value-symbols {
+    div{
+        display: inline;
+        font-size: 25px;
+        margin-right: 20px;
+    }  
+}
+
+@media screen and (min-width: 1220px){
+    .flex-skills-container {
+       display: grid;
+       grid-template-columns: repeat(2, 1fr);;
+       width: 100%;
+       padding-left: 8%;
+
+    }
+    
 }
