--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,8 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 header {
@@ -12,6 +13,7 @@ header {
   top: 0;
   padding: 10px 5%;
 }
+
 header nav {
   float: right;
 }
@@ -20,7 +22,7 @@ header nav {
 @media screen and (min-width: 1220px) {
   .menu {
     padding: 20px 10px;
-    display: inline-block;
+    display: block;
     width: 10%;
     position: absolute;
     left: 5px;
@@ -35,6 +37,7 @@ header nav {
     color: white;
   }
 }
+
 .menu ul {
   width: 100%;
   position: absolute;
@@ -42,9 +45,10 @@ header nav {
   left: 10px;
   overflow: hidden;
   list-style: none;
-  background: black;
-  height: 0px;
+  background: grey;
+  height: 0;
 }
+
 @media screen and (min-width: 1220px) {
   .menu ul {
     position: relative;
@@ -54,18 +58,22 @@ header nav {
     height: unset;
   }
 }
+
 .menu li {
   position: relative;
 }
+
 .menu li:hover {
   background: #5a5a5a;
 }
+
 @media screen and (min-width: 1220px) {
   .menu li:hover {
     background: unset;
     border-bottom: 2px solid gray;
   }
 }
+
 @media screen and (min-width: 1220px) {
   .menu li {
     padding: 5px 10px;
@@ -73,6 +81,7 @@ header nav {
     float: left;
   }
 }
+
 .menu a {
   position: relative;
   text-decoration: none;
@@ -81,9 +90,11 @@ header nav {
   line-height: 28px;
   display: block;
 }
+
 .menu a:hover {
   color: #ffff;
 }
+
 @media screen and (min-width: 1220px) {
   .menu a {
     padding: 10px;
@@ -97,17 +108,26 @@ header nav {
   height: 2.5px;
   margin-bottom: 6.5px;
   position: relative;
-  background: #000;
+  background: gray;
   z-index: 1;
-  transform-origin: 3px 0px;
+  -webkit-transform-origin: 3px 0px;
+          transform-origin: 3px 0px;
+  -webkit-transition: opacity 0.55s ease, -webkit-transform 0.5s ease;
+  transition: opacity 0.55s ease, -webkit-transform 0.5s ease;
   transition: transform 0.5s ease, opacity 0.55s ease;
+  transition: transform 0.5s ease, opacity 0.55s ease, -webkit-transform 0.5s ease;
 }
+
 .bars:first-child {
-  transform-origin: 0% 0%;
+  -webkit-transform-origin: 0% 0%;
+          transform-origin: 0% 0%;
 }
+
 .bars:nth-last-child(2) {
-  transform-origin: 0% 100%;
+  -webkit-transform-origin: 0% 100%;
+          transform-origin: 0% 100%;
 }
+
 @media screen and (min-width: 1220px) {
   .bars {
     display: none;
@@ -123,24 +143,34 @@ header nav {
   z-index: 2;
   position: absolute;
 }
+
 .button:hover {
   cursor: pointer;
 }
+
 .button:checked ~ ul {
   height: 240px;
+  -webkit-transition: height 0.5s ease-in-out;
   transition: height 0.5s ease-in-out;
 }
+
 .button:checked ~ span {
   opacity: 1;
-  transform: rotate(45deg) translate(2px, 1px);
+  -webkit-transform: rotate(45deg) translate(2px, 1px);
+          transform: rotate(45deg) translate(2px, 1px);
 }
+
 .button:checked ~ span:nth-last-child(3) {
   opacity: 0;
-  transform: rotate(0deg) scale(0.2, 0.2);
+  -webkit-transform: rotate(0deg) scale(0.2, 0.2);
+          transform: rotate(0deg) scale(0.2, 0.2);
 }
+
 .button:checked ~ span:nth-last-child(2) {
-  transform: rotate(-45deg) translate(1px, 0px);
+  -webkit-transform: rotate(-45deg) translate(1px, 0px);
+          transform: rotate(-45deg) translate(1px, 0px);
 }
+
 @media screen and (min-width: 1220px) {
   .button {
     display: none;
@@ -158,11 +188,13 @@ body {
   height: auto;
   margin-top: 10px;
 }
+
 #home img {
   width: 300px;
   height: 300px;
   display: none;
 }
+
 @media (min-width: 1220px) {
   #home {
     width: 60%;
@@ -183,6 +215,7 @@ body {
   margin-top: 30px;
   text-align: left;
 }
+
 .home-content h1 {
   font-size: 40px;
 }
@@ -201,6 +234,7 @@ body {
   color: #FFFF;
   text-decoration: none;
 }
+
 .btn:hover {
   background-color: white;
   color: gray;
@@ -214,12 +248,7 @@ body {
   width: 100%;
   height: 50%;
 }
-@media screen and (min-width: 1220px) {
-  #skills {
-    width: 50%;
-    padding-left: 10%;
-  }
-}
+
 #skills h3 {
   margin-top: 30px;
 }
@@ -253,51 +282,80 @@ body {
   padding-left: 30%;
 }
 
+.value-symbols div {
+  display: inline;
+  font-size: 25px;
+  margin-right: 20px;
+}
+
+@media screen and (min-width: 1220px) {
+  .flex-skills-container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    width: 100%;
+    padding-left: 8%;
+  }
+}
+
 #work .container {
   margin-top: 30px;
   position: relative;
   width: 100%;
 }
+
 @media screen and (min-width: 1220px) {
   #work .container {
     margin: 2%;
   }
 }
+
 #work .image {
   opacity: 1;
   display: block;
   width: 100%;
   height: auto;
-  transition: 0.5s ease;
-  backface-visibility: hidden;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
   border-radius: 3%;
 }
+
 #work .middle {
-  transition: 0.5s ease;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
   opacity: 0;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   text-align: center;
 }
+
 #work .container:hover .image {
   opacity: 0.3;
 }
+
 #work .container:hover .middle {
   opacity: 1;
 }
+
 #work .text {
   background-color: white;
   font-size: 16px;
   padding: 16px 32px;
   border-radius: 4%;
 }
+
 #work .text a {
   color: gray;
   text-decoration: none;
 }
+
 #work .text a:hover {
   color: black;
 }
@@ -313,17 +371,20 @@ body {
 }
 
 main {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
+
 main h1 {
   font-weight: 700;
   color: #d7b94c;
-  font-family: "Inconsolata", Consolas, monospace;
+  font-family: 'Inconsolata', Consolas, monospace;
 }
+
 main h2, main h4 {
   text-align: center;
   font-weight: 300;
 }
+
 main hr {
   width: 80%;
   margin-left: auto;
@@ -333,27 +394,38 @@ main hr {
   border: 1px solid #585d65;
   margin-top: 20px;
 }
+
 main section {
   margin-top: 3%;
   padding: 20px;
 }
+
 main section img {
   width: 100%;
 }
+
 main p {
   margin-top: 10px;
   margin-bottom: 10px;
   position: relative;
   float: left;
 }
+
 main p span {
   position: absolute;
   top: 0;
   right: 0;
   background: gray;
   width: 100%;
-  border-left: 0.1em solid transparent;
-  animation: typing 3s steps(12) forwards, cursor 1s infinite;
+  border-left: .1em solid transparent;
+  -webkit-animation: typing 3s steps(12) forwards, cursor 1s infinite;
+          animation: typing 3s steps(12) forwards, cursor 1s infinite;
+}
+
+@media screen and (min-width: 1220px) {
+  .skills-division {
+    display: none;
+  }
 }
 
 .flex-images {
@@ -361,6 +433,14 @@ main p span {
 }
 
 /* Animation */
+@-webkit-keyframes typing {
+  from {
+    width: 100%;
+  }
+  to {
+    width: 0;
+  }
+}
 @keyframes typing {
   from {
     width: 100%;
@@ -369,15 +449,28 @@ main p span {
     width: 0;
   }
 }
+
+@-webkit-keyframes cursor {
+  50% {
+    border-color: white;
+  }
+}
+
 @keyframes cursor {
   50% {
     border-color: white;
   }
 }
+
 @media screen and (min-width: 1220px) {
   .flex-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: row wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
   }
   .flex-container .flex-images {
     width: 100%;
@@ -387,8 +480,13 @@ main p span {
     border-radius: 4%;
   }
   .flex-container .flex-components {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row;
+            flex-flow: row;
     padding-left: 8%;
   }
   .flex-container .paragraph {
@@ -396,20 +494,26 @@ main p span {
     height: auto;
   }
   .flex-container .second-item:nth-of-type(1) {
-    order: 1;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
   }
 }
+
 footer {
   color: #585d65;
   text-align: center;
   font-size: 20px;
 }
+
 footer a {
   color: gray;
 }
+
 footer a:hover {
   color: white;
 }
+
 footer .fab {
   margin: 20px 20px;
 }
@@ -420,11 +524,12 @@ footer .fab {
     padding-left: 20%;
   }
 }
+
 form input {
   width: 100%;
 }
+
 form .btn {
   color: white;
 }
-
 /*# sourceMappingURL=styles.css.map */
