--- a/components/_main.scss
+++ b/components/_main.scss
@@ -1,94 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap');
 
-main {
+
+* {
+    margin: 0;
+    padding: 3px;
+    box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    h1{
-        font-weight: 700;
-        color: #d7b94c;
-        font-family: 'Inconsolata', Consolas, monospace;
-    }
-    h2, h4{
-        text-align: center;
-        font-weight: 300;
-    }
-    
-    hr{
-        width: 80%;
-        margin-left: auto;
-        margin-right: auto;
-        background-color: #FFFF;
-        height: 1px;
-        border: 1px solid #585d65;
-        margin-top: 20px;
-    }
-    section{
-        margin-top: 3%;
-        padding: 20px;
-        img {
-            width: 100%;
-        }
-    }
+}
+
+body {
+    background-color: #373b40;
+    color: #FFFF;
+}
+
+main {
+    padding: 50px;
+
     p{
-        margin-top: 10px;
-        margin-bottom: 10px;
+        margin-bottom: 50px;
         position: relative;
         float: left;
-    span{
-        position: absolute;
-        top: 0;
-        right: 0;
-        background: gray;
-        width: 100%;
-        border-left: .1em solid transparent;
-        animation: typing 3s steps(12) forwards,
-                             cursor 1s infinite;
-    }
-   
-}
-}
-
-.skills-division {
-    @media screen and (min-width: 1220px){
-        display: none;
     }
 }
-.flex-images {
-    margin-top: 5%;
-}
 
-/* Animation */
-@keyframes typing{
-	from { width: 100%;}
-	to { width: 0;}
-}
-@keyframes cursor{
-	50% { border-color: white;}
-}
-
-
-@media screen and (min-width: 1220px){
-    .flex-container {
-        display: flex;
-        flex-flow: row wrap;
-        .flex-images {
-            width: 100%;
-            height: auto;
-            padding: 3% 3% 0;
-            margin-top: 5%;
-            border-radius: 4%;
-        }
-        .flex-components {
-            display: flex;
-            flex-flow: row;
-            padding-left: 8%;
-        }
-        .paragraph {
-            width: 100%;
-            height: auto;
-        }
-        .second-item {
-            &:nth-of-type(1) { order: 1; 
-            }
-        }
-    }
+.line {
+    background-color: white;
+    height: 1px;
+    margin-bottom: 40px;
 }
