--- a/components/_services.scss
+++ b/components/_services.scss
@@ -1,4 +1,14 @@
 #services {
     width: 100%;
     height: 50%;
+    margin-top: 50px;
+    margin-bottom: 100px;
+    @media screen and (min-width: 769px){
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    p {
+        padding-left: 50px;
+        margin-right: 20px;
+    }
 }
