--- a/components/_skills.scss
+++ b/components/_skills.scss
@@ -1,23 +1,46 @@
 #skills {
     width: 100%;
     height: 50%;
+    margin-top: 100px;
+    margin-bottom: 100px;
     h3{
-        margin-top: 30px;
+        margin-top: 20px;
+    }
+    img {
+        color: white;
+    }
+    @media screen and (min-width: 769px){
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
-
-.progress-bar{
-    height: 25px;
-    width: 100%;
-    color: white;
-    border: 1px solid white;
+.icon-image {
+    width: 200px;
+    height: 100px;
+    
 }
-.percentage{
+.skills-container {
+    margin-right: 20px;
+}
+
+
+
+/* .progress-bar{
     height: 23px;
+    width: 100%;
+    border-radius: 10px;
+    background-color: white;
+    
+}
+
+.percentage{
+    height: 20px;
     background-color: gray;
     width: 90%;
-    padding-left: 80%;
+    padding-left: 80%; 
+    border-radius: 10px; 
+    
 }
 
 .two{
@@ -32,21 +55,23 @@
     width: 40%;
     padding-left: 30%;
 }
-
-.value-symbols {
-    div{
-        display: inline;
-        font-size: 25px;
-        margin-right: 20px;
-    }  
+.five {
+    width: 70%;
+    padding-left: 50%;
 }
+.six {
+    width: 100%;
+    padding-left: 0;
+}
+*/
+
 
 @media screen and (min-width: 1220px){
     .flex-skills-container {
        display: grid;
        grid-template-columns: repeat(2, 1fr);;
        width: 100%;
-       padding-left: 8%;
+       
 
     }
     
