--- a/components/_home.scss
+++ b/components/_home.scss
@@ -17,7 +17,7 @@ header {
             display: block;
             margin-left: auto;
             margin-right: auto;
-            box-shadow: 0 0 20px 10px black;
+            box-shadow: 0 0 20px 10px grey;
             border-radius: 50%;
             @media screen and (min-width: 1220px){
                 width: 300px;
@@ -45,6 +45,7 @@ header {
 
 .description {
     text-align: left;
+    font-size: 20px;
 }
 
 .btn {
