--- a/components/_skills.scss
+++ b/components/_skills.scss
@@ -3,8 +3,8 @@
     height: 50%;
     margin-top: 100px;
     margin-bottom: 100px;
-    h3{
-        margin-top: 20px;
+    h2 {
+        margin-top: 50px;
     }
     img {
         color: white;
@@ -16,63 +16,22 @@
 }
 
 .icon-image {
-    width: 200px;
-    height: 100px;
-    
+    width: 150px;
+    height: 100px;  
 }
+
+
+
 .skills-container {
     margin-right: 20px;
 }
 
-
-
-/* .progress-bar{
-    height: 23px;
-    width: 100%;
-    border-radius: 10px;
-    background-color: white;
-    
-}
-
-.percentage{
-    height: 20px;
-    background-color: gray;
-    width: 90%;
-    padding-left: 80%; 
-    border-radius: 10px; 
-    
-}
-
-.two{
-    width: 50%;
-    padding-left: 40%;
-}
-.three{
-    width: 80%;
-    padding-left: 70%;
-}
-.four{
-    width: 40%;
-    padding-left: 30%;
-}
-.five {
-    width: 70%;
-    padding-left: 50%;
-}
-.six {
-    width: 100%;
-    padding-left: 0;
-}
-*/
-
-
-@media screen and (min-width: 1220px){
-    .flex-skills-container {
-       display: grid;
-       grid-template-columns: repeat(2, 1fr);;
-       width: 100%;
-       
-
+.grid {
+    @media screen and (min-width:769px){
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
     }
-    
 }
+
+
+
