--- a/styles.css
+++ b/styles.css
@@ -2,22 +2,26 @@
 header h1 {
   font-weight: 700;
   color: #d7b94c;
-  font-family: "Inconsolata", Consolas, monospace;
+  font-family: 'Inconsolata', Consolas, monospace;
 }
+
 header section {
   width: 100%;
   height: auto;
   margin-top: 50px;
 }
+
 header section img {
   width: 250px;
   height: 250px;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  box-shadow: 0 0 20px 10px grey;
+  -webkit-box-shadow: 0 0 20px 10px grey;
+          box-shadow: 0 0 20px 10px grey;
   border-radius: 50%;
 }
+
 @media screen and (min-width: 1220px) {
   header section img {
     width: 300px;
@@ -31,12 +35,14 @@ header section img {
   padding: 30px;
   text-align: center;
 }
+
 @media screen and (min-width: 1220px) {
   .header-content {
     text-align: left;
     padding: 40px;
   }
 }
+
 .header-content h1 {
   font-size: 40px;
 }
@@ -56,12 +62,15 @@ header section img {
   font-size: 16px;
   text-decoration: none;
 }
+
 .btn:hover {
   background-color: white;
 }
+
 .btn a {
   color: white;
 }
+
 .btn a:hover {
   color: gray;
   text-decoration: none;
@@ -69,27 +78,33 @@ header section img {
 
 @media screen and (min-width: 1220px) {
   #container {
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
   }
 }
 
 #skills {
   width: 100%;
   height: 50%;
-  margin-top: 100px;
   margin-bottom: 100px;
 }
+
 #skills h2 {
   margin-top: 50px;
 }
+
 #skills img {
   color: white;
 }
+
 @media screen and (min-width: 769px) {
   #skills {
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
   }
 }
 
@@ -98,15 +113,17 @@ header section img {
   height: 100px;
 }
 
-.skills-container {
-  margin-right: 20px;
+@media screen and (min-width: 769px) {
+  .skills-container {
+    margin-right: 20px;
+  }
 }
 
-@media screen and (min-width: 769px) {
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-  }
+.grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
 }
 
 #work .container {
@@ -114,57 +131,72 @@ header section img {
   position: relative;
   width: 100%;
 }
+
 @media screen and (min-width: 1220px) {
   #work .container {
     margin: 2%;
   }
 }
+
 #work .image {
   opacity: 1;
   display: block;
   width: 100%;
   height: auto;
-  transition: 0.5s ease;
-  backface-visibility: hidden;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
   border-radius: 3%;
 }
+
 #work .middle {
-  transition: 0.5s ease;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
   opacity: 0;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   text-align: center;
 }
+
 #work .container:hover .image {
   opacity: 0.3;
 }
+
 #work .container:hover .middle {
   opacity: 1;
 }
+
 #work .text {
   background-color: white;
   font-size: 16px;
   padding: 16px 32px;
   border-radius: 4%;
 }
+
 #work .text a {
   color: gray;
   text-decoration: none;
 }
+
 #work .text a:hover {
   color: black;
 }
 
 .work-container {
-  margin: 50px 0;
+  margin: 30px 0;
 }
+
 @media screen and (min-width: 769px) {
   .work-container {
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
   }
 }
 
@@ -172,17 +204,24 @@ header section img {
   width: 100%;
   height: 50%;
   margin-top: 50px;
-  margin-bottom: 100px;
+  margin-bottom: 20px;
 }
+
 @media screen and (min-width: 769px) {
   #services {
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+  #services p {
+    padding-left: 70px;
+    margin-right: 40px;
   }
 }
+
 #services p {
-  padding-left: 70px;
-  margin-right: 40px;
+  padding-top: 15px;
 }
 
 .fas, .far {
@@ -194,8 +233,9 @@ header section img {
 * {
   margin: 0;
   padding: 3px;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 
 body {
@@ -204,8 +244,9 @@ body {
 }
 
 main {
-  padding: 50px;
+  padding: 20px;
 }
+
 main p {
   margin-bottom: 50px;
   position: relative;
@@ -223,14 +264,16 @@ footer {
   text-align: center;
   font-size: 30px;
 }
+
 footer a {
   color: gray;
 }
+
 footer a:hover {
   color: white;
 }
+
 footer .fab {
   margin: 20px 20px;
 }
-
 /*# sourceMappingURL=styles.css.map */
