--- a/styles.css
+++ b/styles.css
@@ -2,26 +2,22 @@
 header h1 {
   font-weight: 700;
   color: #d7b94c;
-  font-family: 'Inconsolata', Consolas, monospace;
+  font-family: "Inconsolata", Consolas, monospace;
 }
-
 header section {
   width: 100%;
   height: auto;
   margin-top: 50px;
 }
-
 header section img {
   width: 250px;
   height: 250px;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  -webkit-box-shadow: 0 0 20px 10px grey;
-          box-shadow: 0 0 20px 10px grey;
+  box-shadow: 0 0 20px 10px grey;
   border-radius: 50%;
 }
-
 @media screen and (min-width: 1220px) {
   header section img {
     width: 300px;
@@ -35,14 +31,12 @@ header section img {
   padding: 30px;
   text-align: center;
 }
-
 @media screen and (min-width: 1220px) {
   .header-content {
     text-align: left;
     padding: 40px;
   }
 }
-
 .header-content h1 {
   font-size: 40px;
 }
@@ -62,15 +56,12 @@ header section img {
   font-size: 16px;
   text-decoration: none;
 }
-
 .btn:hover {
   background-color: white;
 }
-
 .btn a {
   color: white;
 }
-
 .btn a:hover {
   color: gray;
   text-decoration: none;
@@ -78,10 +69,8 @@ header section img {
 
 @media screen and (min-width: 1220px) {
   #container {
-    display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
@@ -90,21 +79,16 @@ header section img {
   height: 50%;
   margin-bottom: 100px;
 }
-
 #skills h2 {
   margin-top: 50px;
 }
-
 #skills img {
   color: white;
 }
-
 @media screen and (min-width: 769px) {
   #skills {
-    display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
@@ -120,10 +104,8 @@ header section img {
 }
 
 .grid {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
 }
 
 #work .container {
@@ -131,58 +113,46 @@ header section img {
   position: relative;
   width: 100%;
 }
-
 @media screen and (min-width: 1220px) {
   #work .container {
     margin: 2%;
   }
 }
-
 #work .image {
   opacity: 1;
   display: block;
   width: 100%;
   height: auto;
-  -webkit-transition: .5s ease;
-  transition: .5s ease;
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
+  transition: 0.5s ease;
+  backface-visibility: hidden;
   border-radius: 3%;
 }
-
 #work .middle {
-  -webkit-transition: .5s ease;
-  transition: .5s ease;
+  transition: 0.5s ease;
   opacity: 0;
   position: absolute;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   text-align: center;
 }
-
 #work .container:hover .image {
   opacity: 0.3;
 }
-
 #work .container:hover .middle {
   opacity: 1;
 }
-
 #work .text {
   background-color: white;
   font-size: 16px;
   padding: 16px 32px;
   border-radius: 4%;
 }
-
 #work .text a {
   color: gray;
   text-decoration: none;
 }
-
 #work .text a:hover {
   color: black;
 }
@@ -190,13 +160,10 @@ header section img {
 .work-container {
   margin: 30px 0;
 }
-
 @media screen and (min-width: 769px) {
   .work-container {
-    display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
@@ -206,20 +173,16 @@ header section img {
   margin-top: 50px;
   margin-bottom: 20px;
 }
-
 @media screen and (min-width: 769px) {
   #services {
-    display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
   #services p {
     padding-left: 70px;
     margin-right: 40px;
   }
 }
-
 #services p {
   padding-top: 15px;
 }
@@ -233,9 +196,8 @@ header section img {
 * {
   margin: 0;
   padding: 3px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
@@ -246,7 +208,6 @@ body {
 main {
   padding: 20px;
 }
-
 main p {
   margin-bottom: 50px;
   position: relative;
@@ -264,16 +225,14 @@ footer {
   text-align: center;
   font-size: 30px;
 }
-
 footer a {
   color: gray;
 }
-
 footer a:hover {
   color: white;
 }
-
 footer .fab {
   margin: 20px 20px;
 }
+
 /*# sourceMappingURL=styles.css.map */
